deploy: 59005301bbcd1bf5fe47063514d1e2bab547a8c7

--- a/about/index.html
+++ b/about/index.html
@@ -120,14 +120,15 @@ window.onload = wrap_img;
 <p>Something about me.</p>
 <ul>
   <li>Diploma in Mathematics, focus on nonlinear optimization</li>
-  <li>M.Sc. Computational Science and Engineering, Thesis: Deep learning w/ Autoencoder</li>
+  <li>M.Sc. Computational Science and Engineering, Thesis:<br />
+Deep learning w/ Autoencoder</li>
   <li>PhD in Computer Science (numerical methods, inverse problems)</li>
-  <li>Machine Learning Engineer Football Analytics w/ Jan Van Haaren
+  <li>Machine Learning Engineer Football Analytics w/ Jan Van Haaren at <a href="https://www.scisports.com/">SciSports</a>
     <ul>
       <li>models on event data</li>
     </ul>
   </li>
-  <li>Football Data Scientist, Deltatre AG / Sportec Solutions
+  <li>Football Data Scientist, <a href="https://www.deltatre.com/">Deltatre AG</a> / <a href="https://www.sportec-solutions.de/en/index.html">Sportec Solutions</a>
     <ul>
       <li>data provider for German Bundesliga</li>
       <li>models for clubs and media based on tracking and event data</li>
@@ -138,9 +139,9 @@ window.onload = wrap_img;
 
 <p>Misc:</p>
 <ul>
-  <li>Part of German first Hackathon team</li>
-  <li>Mentor at second Hackathon</li>
-  <li>Helped GIG with data analytics at AusOpen2020</li>
+  <li>Part of German first <a href="https://www.dfb-akademie.de/hackathon/-/id-11008884">Hackathon</a> team</li>
+  <li>Mentor at <a href="https://www.dfb-akademie.de/hackathon-2-sts-akademie-eintracht/-/id-11009109">Hackathon v2</a></li>
+  <li>Helped <a href="https://www.gameinsightgroup.com/">GIG</a> with data analytics at AusOpen 2020</li>
 </ul>
 
 <h2 id="fastpages">fastpages</h2>
