deploy: 6b88ef44e10e33a701e8f2fb8d1d326fb181de18

--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@ window.onload = wrap_img;
   <li>M.Sc. Computational Science and Engineering, Thesis:<br />
 Deep learning w/ Autoencoder</li>
   <li>PhD in Computer Science (numerical methods, inverse problems)</li>
-  <li>Machine Learning Engineer Football Analytics w/ Jan Van Haaren at <a href="https://www.scisports.com/">SciSports</a>
+  <li>Machine Learning Engineer Football Analytics w/ <a href="https://twitter.com/JanVanHaaren">Jan Van Haaren</a> at <a href="https://www.scisports.com/">SciSports</a>
     <ul>
       <li>models on event data</li>
     </ul>
